Img paths changed

--- a/src/app/blog/blog-attributes/blog-single.html
+++ b/src/app/blog/blog-attributes/blog-single.html
@@ -10,32 +10,32 @@
 <meta name="description" content="">
 <meta name="author" content="DynamicLayers">
 <title>Charitify || NGO/Charity/Fundraising Template</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://html.dynamiclayers.net/dl/charitify/img/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="../../assets/img/favicon.png">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/font-awesome.min.css">
+<link rel="stylesheet" href="../../assets/css/font-awesome.min.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/themify-icons.css">
+<link rel="stylesheet" href="../../assets/css/themify-icons.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/elegant-font-icons.css">
+<link rel="stylesheet" href="../../assets/css/elegant-font-icons.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/elegant-line-icons.css">
+<link rel="stylesheet" href="../../assets/css/elegant-line-icons.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../assets/css/bootstrap.min.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/venobox/venobox.css">
+<link rel="stylesheet" href="../../assets/css/venobox/venobox.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/owl.carousel.css">
+<link rel="stylesheet" href="../../assets/css/owl.carousel.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/slicknav.min.css">
+<link rel="stylesheet" href="../../assets/css/slicknav.min.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/css-animation.min.css">
+<link rel="stylesheet" href="../../assets/css/css-animation.min.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/nivo-slider.css">
+<link rel="stylesheet" href="../../assets/css/nivo-slider.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/main.css">
+<link rel="stylesheet" href="../../assets/css/main.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/responsive.css">
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+<link rel="stylesheet" href="../../assets/css/responsive.css">
+<script src="../../assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
 <!--[if lt IE 8]>
@@ -71,7 +71,7 @@
 <div class="bottom-content-wrap row">
 <div class="col-sm-4">
 <div class="site-branding">
-<a href="#"><img src="https://html.dynamiclayers.net/dl/charitify/img/logo.png" alt="Brand"></a>
+<a href="#"><img src="../../assets/img/logo.png" alt="Brand"></a>
 </div>
 </div>
 <div class="col-sm-8 text-right">
@@ -128,7 +128,7 @@
 <div class="row">
 <div class="col-lg-9 sm-padding">
 <div class="blog-items single-post row">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/post-1.jpg" alt="blog post">
+<img src="../../assets/img/post-1.jpg" alt="blog post">
 <h2>Standard single blog post with image. Best for website template.</h2>
 <div class="meta-info">
 <span>
@@ -156,7 +156,7 @@
 <li>
 <div class="comment-main-level">
 
-<div class="comment-avatar"> <img src="https://html.dynamiclayers.net/dl/charitify/img/comment-1.jpg" alt="comment"> </div>
+<div class="comment-avatar"> <img src="../../assets/img/comment-1.jpg" alt="comment"> </div>
 
 <div class="comment-box">
 <div class="comment-head">
@@ -174,7 +174,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et i
 <ul class="comments-list reply-list">
 <li>
 
-<div class="comment-avatar"> <img src="https://html.dynamiclayers.net/dl/charitify/img/comment-2.jpg" alt="comment"> </div>
+<div class="comment-avatar"> <img src="../../assets/img/comment-2.jpg" alt="comment"> </div>
 
 <div class="comment-box">
 <div class="comment-head">
@@ -190,7 +190,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et i
 </li>
 <li>
 
-<div class="comment-avatar"> <img src="https://html.dynamiclayers.net/dl/charitify/img/comment-3.jpg" alt="comment"> </div>
+<div class="comment-avatar"> <img src="../../assets/img/comment-3.jpg" alt="comment"> </div>
 
 <div class="comment-box">
 <div class="comment-head">
@@ -209,7 +209,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et i
 <li>
 <div class="comment-main-level">
 
-<div class="comment-avatar"> <img src="https://html.dynamiclayers.net/dl/charitify/img/comment-4.jpg" alt="comment"> </div>
+<div class="comment-avatar"> <img src="../../assets/img/comment-4.jpg" alt="comment"> </div>
 
 <div class="comment-box">
 <div class="comment-head">
@@ -280,35 +280,35 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et i
 <h4>Recent Posts</h4>
 <ul class="recent-posts">
 <li>
-<img src="https://html.dynamiclayers.net/dl/charitify/img/rel-post-1.jpg" alt="blog post">
+<img src="../../assets/img/rel-post-1.jpg" alt="blog post">
 <div>
 <h4><a href="#">Standard post</a></h4>
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 </div>
 </li>
 <li>
-<img src="https://html.dynamiclayers.net/dl/charitify/img/rel-post-2.jpg" alt="blog post">
+<img src="../../assets/img/rel-post-2.jpg" alt="blog post">
 <div>
 <h4><a href="#">Post with small image</a></h4>
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 </div>
 </li>
 <li>
-<img src="https://html.dynamiclayers.net/dl/charitify/img/rel-post-3.jpg" alt="blog post">
+<img src="../../assets/img/rel-post-3.jpg" alt="blog post">
 <div>
  <h4><a href="#">Quote post</a></h4>
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 </div>
 </li>
 <li>
-<img src="https://html.dynamiclayers.net/dl/charitify/img/rel-post-4.jpg" alt="blog post">
+<img src="../../assets/img/rel-post-4.jpg" alt="blog post">
 <div>
 <h4><a href="#">Standard video post</a></h4>
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 </div>
 </li>
 <li>
-<img src="https://html.dynamiclayers.net/dl/charitify/img/rel-post-5.jpg" alt="blog post">
+<img src="../../assets/img/rel-post-5.jpg" alt="blog post">
 <div>
 <h4><a href="#">gallery post</a></h4>
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
@@ -339,7 +339,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et i
 <div class="widget-wrap row">
 <div class="col-md-4 xs-padding">
 <div class="widget-content">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/logo-light.png" alt="logo">
+<img src="../../assets/img/logo-light.png" alt="logo">
 <p>Lorem Ipsum is simply dummy printing and industry. It has survived not only five centuries, but also the leap electronic type essentially unchanged.</p>
 <ul class="social-icon">
 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -393,38 +393,38 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et i
 </footer>
 <a data-scroll href="#header" id="scroll-to-top"><i class="arrow_up"></i></a>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery-1.12.4.min.js"></script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../../assets/js/vendor/jquery-1.12.4.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/bootstrap.min.js"></script>
+<script src="../../assets/js/vendor/bootstrap.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/tether.min.js"></script>
+<script src="../../assets/js/vendor/tether.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/imagesloaded.pkgd.min.js"></script>
+<script src="../../assets/js/vendor/imagesloaded.pkgd.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/owl.carousel.min.js"></script>
+<script src="../../assets/js/vendor/owl.carousel.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.isotope.v3.0.2.js"></script>
+<script src="../../assets/js/vendor/jquery.isotope.v3.0.2.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/smooth-scroll.min.js"></script>
+<script src="../../assets/js/vendor/smooth-scroll.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/venobox.min.js"></script>
+<script src="../../assets/js/vendor/venobox.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.ajaxchimp.min.js"></script>
+<script src="../../assets/js/vendor/jquery.ajaxchimp.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.counterup.min.js"></script>
+<script src="../../assets/js/vendor/jquery.counterup.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.waypoints.v2.0.3.min.js"></script>
+<script src="../../assets/js/vendor/jquery.waypoints.v2.0.3.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.slicknav.min.js"></script>
+<script src="../../assets/js/vendor/jquery.slicknav.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.nivo.slider.pack.js"></script>
+<script src="../../assets/js/vendor/jquery.nivo.slider.pack.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/letteranimation.min.js"></script>
+<script src="../../assets/js/vendor/letteranimation.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/wow.min.js"></script>
+<script src="../../assets/js/vendor/wow.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/contact.js"></script>
+<script src="../../assets/js/contact.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/main.js"></script>
+<script src="../../assets/js/main.js"></script>
 </body>
 </html>
