--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="DynamicLayers">
 <title>Charitify || NGO/Charity/Fundraising Template</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://html.dynamiclayers.net/dl/charitify/img/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="../../assets/img/favicon.png">
 
 <link rel="stylesheet" href="../../assets/css/font-awesome.min.css">
 
@@ -71,7 +71,7 @@
 <div class="bottom-content-wrap row">
 <div class="col-sm-4">
 <div class="site-branding">
-<a href="#"><img src="https://html.dynamiclayers.net/dl/charitify/img/logo.png" alt="Brand"></a>
+<a href="#"><img src="../../assets/img/logo.png" alt="Brand"></a>
 </div>
 </div>
 <div class="col-sm-8 text-right">
@@ -174,7 +174,7 @@
 <div class="widget-wrap row">
 <div class="col-md-4 xs-padding">
 <div class="widget-content">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/logo-light.png" alt="logo">
+<img src="../../assets/img/logo-light.png" alt="logo">
 <p>Lorem Ipsum is simply dummy printing and industry. It has survived not only five centuries, but also the leap electronic type essentially unchanged.</p>
 <ul class="social-icon">
 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
