--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="DynamicLayers">
 <title>Charitify || NGO/Charity/Fundraising Template</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://html.dynamiclayers.net/dl/charitify/img/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="../../assets/img/favicon.png">
 
 <link rel="stylesheet" href="../../assets/css/font-awesome.min.css">
 
@@ -71,7 +71,7 @@
 <div class="bottom-content-wrap row">
 <div class="col-sm-4">
 <div class="site-branding">
-<a href="#"><img src="https://html.dynamiclayers.net/dl/charitify/img/logo.png" alt="Brand"></a>
+<a href="#"><img src="../../assets/img/logo.png" alt="Brand"></a>
 </div>
 </div>
 <div class="col-sm-8 text-right">
@@ -128,7 +128,7 @@
 <div id="event-carousel" class="events-wrap owlCarousel">
 <div class="events-item">
 <div class="event-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/events-1.jpg" alt="events">
+<img src="../../assets/img/events-1.jpg" alt="events">
 </div>
 <div class="event-details">
 <h3>Let's talk about the poor children education.</h3>
@@ -142,7 +142,7 @@
 </div>
 <div class="events-item">
 <div class="event-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/events-2.jpg" alt="events">
+<img src="../../assets/img/events-2.jpg" alt="events">
 </div>
 <div class="event-details">
 <h3>Insure clean water to everyone in Africa.</h3>
@@ -156,7 +156,7 @@
 </div>
 <div class="events-item">
 <div class="event-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/events-3.jpg" alt="events">
+<img src="../../assets/img/events-3.jpg" alt="events">
 </div>
 <div class="event-details">
 <h3>Nepal Earthquake Clean Water Initiative.</h3>
@@ -198,7 +198,7 @@
 <div class="blog-items grid-list row">
 <div class="col-md-4 padding-15">
 <div class="blog-post">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/home-blog-1.jpg" alt="blog post">
+<img src="../../assets/img/home-blog-1.jpg" alt="blog post">
 <div class="blog-content">
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 <h3><a href="#">Standard gallery post</a></h3>
@@ -209,7 +209,7 @@
 </div>
 <div class="col-md-4 padding-15">
 <div class="blog-post">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/home-blog-2.jpg" alt="blog post">
+<img src="../../assets/img/home-blog-2.jpg" alt="blog post">
 <div class="blog-content">
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 <h3><a href="#">Blog post with couple photos</a></h3>
@@ -220,7 +220,7 @@
 </div>
 <div class="col-md-4 padding-15">
 <div class="blog-post">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/home-blog-3.jpg" alt="blog post">
+<img src="../../assets/img/home-blog-3.jpg" alt="blog post">
 <div class="blog-content">
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 <h3><a href="#">Standard gallery post</a></h3>
@@ -238,28 +238,28 @@
 <div class="container">
 <ul id="sponsor-carousel" class="sponsor-items owl-carousel">
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-1.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-1.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-2.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-2.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-3.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-3.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-4.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-4.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-5.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-5.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-6.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-6.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-7.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-7.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-8.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-8.png" alt="sponsor-image">
 </li>
 </ul>
 </div>
@@ -269,7 +269,7 @@
 <div class="widget-wrap row">
 <div class="col-md-4 xs-padding">
 <div class="widget-content">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/logo-light.png" alt="logo">
+<img src="../../assets/img/logo-light.png" alt="logo">
 <p>Lorem Ipsum is simply dummy printing and industry. It has survived not only five centuries, but also the leap electronic type essentially unchanged.</p>
 <ul class="social-icon">
 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
