--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -72,7 +72,7 @@
 <div class="bottom-content-wrap row">
 <div class="col-sm-4">
 <div class="site-branding">
-    <a href="#"><img src="https://html.dynamiclayers.net/dl/charitify/img/logo.png" alt="Brand"></a>
+    <a href="#"><img src="../../assets/img/logo.png" alt="Brand"></a>
 </div>
 </div> 
 <div class="col-sm-8 text-right">
@@ -116,10 +116,10 @@
 <div class="slider-wrapper">
 <div id="main-slider" class="nivoSlider">
      
-<img src="https://html.dynamiclayers.net/dl/charitify/img/slider-1.jpg" alt="" title="#slider-caption-1" style="width:1349;visibility:hidden;" />
-<img src="https://html.dynamiclayers.net/dl/charitify/img/slider-2.jpg" alt="" title="#slider-caption-2" style="width:1349;visibility:hidden;"  />
-<img src="https://html.dynamiclayers.net/dl/charitify/img/slider-3.jpg" alt="" title="#slider-caption-3" style="width:1349;visibility:hidden;"  />
-<img class="nivo-main-image" src="https://html.dynamiclayers.net/dl/charitify/img/slider-3.jpg" style="display: inline; height: 568px; width: 1349px;">
+<img src="../../assets/img/slider-1.jpg" alt="" title="#slider-caption-1" style="width:1349;visibility:hidden;" />
+<img src="../../assets/img/slider-2.jpg" alt="" title="#slider-caption-2" style="width:1349;visibility:hidden;"  />
+<img src="../../assets/img/slider-3.jpg" alt="" title="#slider-caption-3" style="width:1349;visibility:hidden;"  />
+<img class="nivo-main-image" src="../../assets/img/slider-3.jpg" style="display: inline; height: 568px; width: 1349px;">
 <script type="text/javascript">$(window).load(function(){$('#main-slider').nivoSlider();})</script>
  <div class="nivo-caption" style="display: block;">
 
@@ -198,7 +198,7 @@
 <div class="row">
 <div class="col-md-4 col-sm-6 xs-padding">
 <div class="promo-content">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/icon-1.png" alt="prmo icon">
+<img src="../../assets/img/icon-1.png" alt="prmo icon">
 <h3>Make Donetion</h3>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 <a href="#">Read More</a>
@@ -206,7 +206,7 @@
 </div>
 <div class="col-md-4 col-sm-6 xs-padding">
 <div class="promo-content">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/icon-2.png" alt="prmo icon">
+<img src="../../assets/img/icon-2.png" alt="prmo icon">
 <h3>Fundrising</h3>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 <a href="#">Read More</a>
@@ -214,7 +214,7 @@
 </div>
 <div class="col-md-4 col-sm-6 xs-padding">
 <div class="promo-content">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/icon-3.png" alt="prmo icon">
+<img src="../../assets/img/icon-3.png" alt="prmo icon">
 <h3>Become A Volunteer</h3>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 <a href="#">Read More</a>
@@ -235,7 +235,7 @@
 <div class="col-md-4 xs-padding">
 <div class="causes-content">
 <div class="causes-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/causes-1.jpg" alt="causes">
+<img src="../../assets/img/causes-1.jpg" alt="causes">
 <a href="#" class="donate-btn">Donate Now<i class="ti-plus"></i></a>
 <div class="progress">
 <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="wow cssanimation fadeInLeft">25%</span></div>
@@ -255,7 +255,7 @@
 <div class="col-md-4 xs-padding">
 <div class="causes-content">
 <div class="causes-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/causes-2.jpg" alt="causes">
+<img src="../../assets/img/causes-2.jpg" alt="causes">
 <a href="#" class="donate-btn">Donate Now<i class="ti-plus"></i></a>
 <div class="progress">
 <div class="progress-bar" role="progressbar" style="width: 45%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="wow cssanimation fadeInLeft">45%</span></div>
@@ -275,7 +275,7 @@
 <div class="col-md-4 xs-padding">
 <div class="causes-content">
 <div class="causes-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/causes-3.jpg" alt="causes">
+<img src="../../assets/img/causes-3.jpg" alt="causes">
 <a href="#" class="donate-btn">Donate Now<i class="ti-plus"></i></a>
 <div class="progress">
 <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="wow cssanimation fadeInLeft">75%</span></div>
@@ -300,22 +300,22 @@
 <div class="row">
 <div class="col-md-4 xs-padding">
 <div class="profile-wrap">
-<img class="profile" src="https://html.dynamiclayers.net/dl/charitify/img/profile.jpg" alt="profile">
+<img class="profile" src="../../assets/img/profile.jpg" alt="profile">
 <h3>Jonathan Smith <span>CEO & Founder of Charitify.</span></h3>
 <p>Lorem Ipsum is simply dummy printing and industry. It has survived not only five centuries, but also the leap.</p>
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sign.png" alt="sign">
+<img src="../../assets/img/sign.png" alt="sign">
 </div>
 </div>
 <div class="col-md-8 xs-padding">
 <div class="about-wrap row">
 <div class="col-md-6 xs-padding">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/history.jpg" alt="about-thumb">
+<img src="../../assets/img/history.jpg" alt="about-thumb">
 <h3>Our History</h3>
 <p>Lorem Ipsum is simply dummy printing and industry. It has survived not only five centuries, but also the leap electronic type essentially unchanged.</p>
 <a href="#" class="default-btn">Read More</a>
 </div>
 <div class="col-md-6 xs-padding">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/mission.jpg" alt="about-thumb">
+<img src="../../assets/img/mission.jpg" alt="about-thumb">
 <h3>Our Mission</h3>
 <p>Lorem Ipsum is simply dummy printing and industry. It has survived not only five centuries, but also the leap electronic type essentially unchanged.</p>
 <a href="#" class="default-btn">Read More</a>
@@ -345,7 +345,7 @@
 </div>
 <div class="col-md-6 xs-padding">
 <div class="video-wrap">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/video.jpg" alt="video">
+<img src="../../assets/img/video.jpg" alt="video">
 <div class="play">
 <a class="img-popup" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/watch?v=_IlLwfC2dNc"><i class="ti-control-play"></i></a>
 </div>
@@ -366,7 +366,7 @@
 <div class="team-wrap row">
 <div class="col-md-6">
 <div class="team-details">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-1.jpg" alt="team">
+<img src="../../assets/img/team-1.jpg" alt="team">
 <div class="hover">
 <h3>Jonathan Smith <span>Communicator</span></h3>
 </div>
@@ -374,7 +374,7 @@
 </div>
 <div class="col-md-6">
 <div class="team-details">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-2.jpg" alt="team">
+<img src="../../assets/img/team-2.jpg" alt="team">
 <div class="hover">
 <h3>Angelina Rose <span>Certified Reader</span></h3>
 </div>
@@ -382,7 +382,7 @@
 </div>
 <div class="col-md-6">
 <div class="team-details">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-3.jpg" alt="team">
+<img src="../../assets/img/team-3.jpg" alt="team">
 <div class="hover">
 <h3>Taylor Swift <span>Event Creator</span></h3>
 </div>
@@ -390,7 +390,7 @@
 </div>
 <div class="col-md-6">
 <div class="team-details">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-4.jpg" alt="team">
+<img src="../../assets/img/team-4.jpg" alt="team">
 <div class="hover">
 <h3>Michel Brown <span>Internet Specialist</span></h3>
 </div>
@@ -461,7 +461,7 @@
 <div id="event-carousel" class="events-wrap owl-Carousel">
 <div class="events-item">
 <div class="event-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/events-1.jpg" alt="events">
+<img src="../../assets/img/events-1.jpg" alt="events">
 </div>
 <div class="event-details">
 <h3>Let's talk about the poor children education.</h3>
@@ -475,7 +475,7 @@
 </div>
 <div class="events-item">
 <div class="event-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/events-2.jpg" alt="events">
+<img src="../../assets/img/events-2.jpg" alt="events">
 </div>
 <div class="event-details">
 <h3>Insure clean water to everyone in Africa.</h3>
@@ -489,7 +489,7 @@
 </div>
 <div class="events-item">
  <div class="event-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/events-3.jpg" alt="events">
+<img src="../../assets/img/events-3.jpg" alt="events">
 </div>
 <div class="event-details">
 <h3>Nepal Earthquake Clean Water Initiative.</h3>
@@ -515,28 +515,28 @@
 <div class="testimonial-item">
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 <div class="testi-footer">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-1.jpg" alt="profile">
+<img src="../../assets/img/team-1.jpg" alt="profile">
 <h4>Jonathan Smith <span>Marketer</span></h4>
 </div>
 </div>
 <div class="testimonial-item">
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 <div class="testi-footer">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-2.jpg" alt="profile">
+<img src="../../assets/img/team-2.jpg" alt="profile">
 <h4>Angelina Rose <span>Designer</span></h4>
 </div>
 </div>
 <div class="testimonial-item">
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 <div class="testi-footer">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-3.jpg" alt="profile">
+<img src="../../assets/img/team-3.jpg" alt="profile">
 <h4>Taylor Swift <span>Developer</span></h4>
 </div>
 </div>
 <div class="testimonial-item">
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 <div class="testi-footer">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-4.jpg" alt="profile">
+<img src="../../assets/img/team-4.jpg" alt="profile">
 <h4>Michel Brown <span>Programer</span></h4>
 </div>
 </div>
@@ -555,7 +555,7 @@
 <div class="blog-items grid-list row">
 <div class="col-md-4 padding-15">
 <div class="blog-post">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/home-blog-1.jpg" alt="blog post">
+<img src="../../assets/img/home-blog-1.jpg" alt="blog post">
 <div class="blog-content">
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 <h3><a href="#">Standard gallery post</a></h3>
@@ -566,7 +566,7 @@
 </div>
 <div class="col-md-4 padding-15">
 <div class="blog-post">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/home-blog-2.jpg" alt="blog post">
+<img src="../../assets/img/home-blog-2.jpg" alt="blog post">
 <div class="blog-content">
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 <h3><a href="#">Blog post with couple photos</a></h3>
@@ -577,7 +577,7 @@
 </div>
 <div class="col-md-4 padding-15">
 <div class="blog-post">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/home-blog-3.jpg" alt="blog post">
+<img src="../../assets/img/home-blog-3.jpg" alt="blog post">
 <div class="blog-content">
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 <h3><a href="#">Standard gallery post</a></h3>
@@ -595,28 +595,28 @@
 <div class="container">
 <ul id="sponsor-carousel" class="sponsor-items owl-carousel">
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-1.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-1.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-2.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-2.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-3.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-3.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-4.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-4.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-5.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-5.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-6.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-6.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-7.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-7.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-8.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-8.png" alt="sponsor-image">
  </li>
 </ul>
 </div>
@@ -626,7 +626,7 @@
 <div class="widget-wrap row">
 <div class="col-md-4 xs-padding">
 <div class="widget-content">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/logo-light.png" alt="logo">
+<img src="../../assets/img/logo-light.png" alt="logo">
 <p>Lorem Ipsum is simply dummy printing and industry. It has survived not only five centuries, but also the leap electronic type essentially unchanged.</p>
 <ul class="social-icon">
 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
