--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="DynamicLayers">
 <title>Charitify || NGO/Charity/Fundraising Template</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://html.dynamiclayers.net/dl/charitify/img/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="../../assets/img/favicon.png">
 
 <link rel="stylesheet" href="../../assets/css/font-awesome.min.css">
 
@@ -71,7 +71,7 @@
 <div class="bottom-content-wrap row">
 <div class="col-sm-4">
 <div class="site-branding">
-<a href="#"><img src="https://html.dynamiclayers.net/dl/charitify/img/logo.png" alt="Brand"></a>
+<a href="#"><img src="../../assets/img/logo.png" alt="Brand"></a>
 </div>
 </div>
 <div class="col-sm-8 text-right">
@@ -129,7 +129,7 @@
 <div class="col-md-4 padding-15">
 <div class="causes-content">
 <div class="causes-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/causes-1.jpg" alt="causes">
+<img src="../../assets/img/causes-1.jpg" alt="causes">
 <a href="#" class="donate-btn">Donate Now<i class="ti-plus"></i></a>
 <div class="progress">
 <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="wow cssanimation fadeInLeft">25%</span></div>
@@ -149,7 +149,7 @@
 <div class="col-md-4 padding-15">
 <div class="causes-content">
 <div class="causes-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/causes-2.jpg" alt="causes">
+<img src="../../assets/img/causes-2.jpg" alt="causes">
 <a href="#" class="donate-btn">Donate Now<i class="ti-plus"></i></a>
 <div class="progress">
 <div class="progress-bar" role="progressbar" style="width: 45%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="wow cssanimation fadeInLeft">45%</span></div>
@@ -169,7 +169,7 @@
 <div class="col-md-4 padding-15">
 <div class="causes-content">
 <div class="causes-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/causes-3.jpg" alt="causes">
+<img src="../../assets/img/causes-3.jpg" alt="causes">
 <a href="#" class="donate-btn">Donate Now<i class="ti-plus"></i></a>
 <div class="progress">
 <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="wow cssanimation fadeInLeft">75%</span></div>
@@ -189,7 +189,7 @@
 <div class="col-md-4 padding-15">
 <div class="causes-content">
 <div class="causes-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/causes-4.jpg" alt="causes">
+<img src="../../assets/img/causes-4.jpg" alt="causes">
 <a href="#" class="donate-btn">Donate Now<i class="ti-plus"></i></a>
 <div class="progress">
 <div class="progress-bar" role="progressbar" style="width: 55%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="wow cssanimation fadeInLeft">55%</span></div>
@@ -209,7 +209,7 @@
 <div class="col-md-4 padding-15">
 <div class="causes-content">
 <div class="causes-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/causes-5.jpg" alt="causes">
+<img src="../../assets/img/causes-5.jpg" alt="causes">
 <a href="#" class="donate-btn">Donate Now<i class="ti-plus"></i></a>
 <div class="progress">
 <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="wow cssanimation fadeInLeft">85%</span></div>
@@ -229,7 +229,7 @@
 <div class="col-md-4 padding-15">
 <div class="causes-content">
 <div class="causes-thumb">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/causes-6.jpg" alt="causes">
+<img src="../../assets/img/causes-6.jpg" alt="causes">
 <a href="#" class="donate-btn">Donate Now<i class="ti-plus"></i></a>
 <div class="progress">
 <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span class="wow cssanimation fadeInLeft">25%</span></div>
@@ -269,7 +269,7 @@
 </div>
 <div class="col-md-6 xs-padding">
 <div class="video-wrap">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/video.jpg" alt="video">
+<img src="../../assets/img/video.jpg" alt="video">
 <div class="play">
 <a class="img-popup" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/watch?v=_IlLwfC2dNc"><i class="ti-control-play"></i></a>
 </div>
@@ -289,28 +289,28 @@
 <div class="testimonial-item">
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 <div class="testi-footer">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-1.jpg" alt="profile">
+<img src="../../assets/img/team-1.jpg" alt="profile">
 <h4>Jonathan Smith <span>Marketer</span></h4>
 </div>
 </div>
 <div class="testimonial-item">
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 <div class="testi-footer">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-2.jpg" alt="profile">
+<img src="../../assets/img/team-2.jpg" alt="profile">
 <h4>Angelina Rose <span>Designer</span></h4>
 </div>
 </div>
 <div class="testimonial-item">
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 <div class="testi-footer">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-3.jpg" alt="profile">
+<img src="../../assets/img/team-3.jpg" alt="profile">
 <h4>Taylor Swift <span>Developer</span></h4>
 </div>
 </div>
 <div class="testimonial-item">
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 <div class="testi-footer">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-4.jpg" alt="profile">
+<img src="../../assets/img/team-4.jpg" alt="profile">
 <h4>Michel Brown <span>Programer</span></h4>
 </div>
 </div>
@@ -329,7 +329,7 @@
  <div class="blog-items grid-list row">
 <div class="col-md-4 padding-15">
 <div class="blog-post">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/home-blog-1.jpg" alt="blog post">
+<img src="../../assets/img/home-blog-1.jpg" alt="blog post">
 <div class="blog-content">
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 <h3><a href="#">Standard gallery post</a></h3>
@@ -340,7 +340,7 @@
 </div>
 <div class="col-md-4 padding-15">
 <div class="blog-post">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/home-blog-2.jpg" alt="blog post">
+<img src="../../assets/img/home-blog-2.jpg" alt="blog post">
 <div class="blog-content">
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 <h3><a href="#">Blog post with couple photos</a></h3>
@@ -351,7 +351,7 @@
 </div>
 <div class="col-md-4 padding-15">
 <div class="blog-post">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/home-blog-3.jpg" alt="blog post">
+<img src="../../assets/img/home-blog-3.jpg" alt="blog post">
 <div class="blog-content">
 <span class="date"><i class="fa fa-clock-o"></i> January 01.2018</span>
 <h3><a href="#">Standard gallery post</a></h3>
@@ -369,28 +369,28 @@
 <div class="container">
 <ul id="sponsor-carousel" class="sponsor-items owl-carousel">
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-1.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-1.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-2.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-2.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-3.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-3.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-4.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-4.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-5.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-5.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-6.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-6.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-7.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-7.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-8.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-8.png" alt="sponsor-image">
 </li>
 </ul>
 </div>
@@ -400,7 +400,7 @@
 <div class="widget-wrap row">
 <div class="col-md-4 xs-padding">
 <div class="widget-content">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/logo-light.png" alt="logo">
+<img src="../../assets/img/logo-light.png" alt="logo">
 <p>Lorem Ipsum is simply dummy printing and industry. It has survived not only five centuries, but also the leap electronic type essentially unchanged.</p>
 <ul class="social-icon">
 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
