--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="DynamicLayers">
 <title>Charitify || NGO/Charity/Fundraising Template</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://html.dynamiclayers.net/dl/charitify/img/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="../../assets/img/favicon.png">
 
 <link rel="stylesheet" href="../../assets/css/font-awesome.min.css">
 
@@ -71,7 +71,7 @@
 <div class="bottom-content-wrap row">
 <div class="col-sm-4">
 <div class="site-branding">
-<a href="#"><img src="https://html.dynamiclayers.net/dl/charitify/img/logo.png" alt="Brand"></a>
+<a href="#"><img src="../../assets/img/logo.png" alt="Brand"></a>
 </div>
 </div>
 <div class="col-sm-8 text-right">
@@ -128,7 +128,7 @@
 <div class="row about-wrap">
 <div class="col-md-6 xs-padding">
 <div class="about-image">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/about.jpg" alt="about image">
+<img src="../../assets/img/about.jpg" alt="about image">
 </div>
 </div>
 <div class="col-md-6 xs-padding">
@@ -153,7 +153,7 @@
 <div class="team-wrap row">
 <div class="col-md-6">
 <div class="team-details">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-1.jpg" alt="team">
+<img src="../../assets/img/team-1.jpg" alt="team">
 <div class="hover">
 <h3>Jonathan Smith <span>Communicator</span></h3>
 </div>
@@ -161,7 +161,7 @@
 </div>
 <div class="col-md-6">
 <div class="team-details">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-2.jpg" alt="team">
+<img src="../../assets/img/team-2.jpg" alt="team">
 <div class="hover">
 <h3>Angelina Rose <span>Certified Reader</span></h3>
 </div>
@@ -169,7 +169,7 @@
 </div>
 <div class="col-md-6">
 <div class="team-details">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-3.jpg" alt="team">
+<img src="../../assets/img/team-3.jpg" alt="team">
 <div class="hover">
 <h3>Taylor Swift <span>Event Creator</span></h3>
 </div>
@@ -177,7 +177,7 @@
 </div>
 <div class="col-md-6">
 <div class="team-details">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/team-4.jpg" alt="team">
+<img src="../../assets/img/team-4.jpg" alt="team">
 <div class="hover">
 <h3>Michel Brown <span>Internet Specialist</span></h3>
 </div>
@@ -242,28 +242,28 @@
 <div class="container">
 <ul id="sponsor-carousel" class="sponsor-items owl-carousel">
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-1.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-1.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-2.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-2.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-3.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-3.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-4.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-4.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-5.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-5.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-6.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-6.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-7.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-7.png" alt="sponsor-image">
 </li>
 <li class="sponsor-item">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/sponsor-8.png" alt="sponsor-image">
+<img src="../../assets/img/sponsor-8.png" alt="sponsor-image">
 </li>
 </ul>
 </div>
@@ -273,7 +273,7 @@
 <div class="widget-wrap row">
 <div class="col-md-4 xs-padding">
 <div class="widget-content">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/logo-light.png" alt="logo">
+<img src="../../assets/img/logo-light.png" alt="logo">
 <p>Lorem Ipsum is simply dummy printing and industry. It has survived not only five centuries, but also the leap electronic type essentially unchanged.</p>
 <ul class="social-icon">
 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
