--- a/src/app/blog/blog-attributes/blog-list-classic.html
+++ b/src/app/blog/blog-attributes/blog-list-classic.html
@@ -10,32 +10,32 @@
 <meta name="description" content="">
 <meta name="author" content="DynamicLayers">
 <title>Charitify || NGO/Charity/Fundraising Template</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://html.dynamiclayers.net/dl/charitify/img/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="../../assets/img/favicon.png">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/font-awesome.min.css">
+<link rel="stylesheet" href="../../assets/css/font-awesome.min.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/themify-icons.css">
+<link rel="stylesheet" href="../../assets/css/themify-icons.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/elegant-font-icons.css">
+<link rel="stylesheet" href="../../assets/css/elegant-font-icons.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/elegant-line-icons.css">
+<link rel="stylesheet" href="../../assets/css/elegant-line-icons.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../assets/css/bootstrap.min.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/venobox/venobox.css">
+<link rel="stylesheet" href="../../assets/css/venobox/venobox.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/owl.carousel.css">
+<link rel="stylesheet" href="../../assets/css/owl.carousel.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/slicknav.min.css">
+<link rel="stylesheet" href="../../assets/css/slicknav.min.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/css-animation.min.css">
+<link rel="stylesheet" href="../../assets/css/css-animation.min.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/nivo-slider.css">
+<link rel="stylesheet" href="../../assets/css/nivo-slider.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/main.css">
+<link rel="stylesheet" href="../../assets/css/main.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/responsive.css">
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+<link rel="stylesheet" href="../../assets/css/responsive.css">
+<script src="../../assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
 <!--[if lt IE 8]>
@@ -71,7 +71,7 @@
 <div class="bottom-content-wrap row">
 <div class="col-sm-4">
 <div class="site-branding">
-<a href="#"><img src="https://html.dynamiclayers.net/dl/charitify/img/logo.png" alt="Brand"></a>
+<a href="#"><img src="../../assets/img/logo.png" alt="Brand"></a>
 </div>
 </div>
 <div class="col-sm-8 text-right">
@@ -130,7 +130,7 @@
 <div class="blog-items list-items list-classic row">
 <div class="blog-post row">
 <div class="col-md-6">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/post-1.jpg" alt="blog post">
+<img src="../../assets/img/post-1.jpg" alt="blog post">
 <span class="cat">Lifestyle</span>
 </div>
 <div class="col-md-6">
@@ -144,7 +144,7 @@
 </div>
 <div class="blog-post row">
  <div class="col-md-6">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/post-2.jpg" alt="blog post">
+<img src="../../assets/img/post-2.jpg" alt="blog post">
 <span class="cat">Design</span>
 </div>
 <div class="col-md-6">
@@ -158,7 +158,7 @@
 </div>
 <div class="blog-post row">
 <div class="col-md-6">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/post-3.jpg" alt="blog post">
+<img src="../../assets/img/post-3.jpg" alt="blog post">
 <span class="cat">Travel</span>
 </div>
 <div class="col-md-6">
@@ -172,7 +172,7 @@
 </div>
 <div class="blog-post row">
 <div class="col-md-6">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/post-4.jpg" alt="blog post">
+<img src="../../assets/img/post-4.jpg" alt="blog post">
 <span class="cat">Lifestyle</span>
 </div>
 <div class="col-md-6">
@@ -201,7 +201,7 @@
 <div class="widget-wrap row">
 <div class="col-md-4 xs-padding">
 <div class="widget-content">
-<img src="https://html.dynamiclayers.net/dl/charitify/img/logo-light.png" alt="logo">
+<img src="../../assets/img/logo-light.png" alt="logo">
 <p>Lorem Ipsum is simply dummy printing and industry. It has survived not only five centuries, but also the leap electronic type essentially unchanged.</p>
 <ul class="social-icon">
 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -255,38 +255,38 @@
 </footer>
 <a data-scroll href="#header" id="scroll-to-top"><i class="arrow_up"></i></a>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery-1.12.4.min.js"></script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../../assets/js/vendor/jquery-1.12.4.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/bootstrap.min.js"></script>
+<script src="../../assets/js/vendor/bootstrap.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/tether.min.js"></script>
+<script src="../../assets/js/vendor/tether.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/imagesloaded.pkgd.min.js"></script>
+<script src="../../assets/js/vendor/imagesloaded.pkgd.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/owl.carousel.min.js"></script>
+<script src="../../assets/js/vendor/owl.carousel.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.isotope.v3.0.2.js"></script>
+<script src="../../assets/js/vendor/jquery.isotope.v3.0.2.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/smooth-scroll.min.js"></script>
+<script src="../../assets/js/vendor/smooth-scroll.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/venobox.min.js"></script>
+<script src="../../assets/js/vendor/venobox.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.ajaxchimp.min.js"></script>
+<script src="../../assets/js/vendor/jquery.ajaxchimp.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.counterup.min.js"></script>
+<script src="../../assets/js/vendor/jquery.counterup.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.waypoints.v2.0.3.min.js"></script>
+<script src="../../assets/js/vendor/jquery.waypoints.v2.0.3.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.slicknav.min.js"></script>
+<script src="../../assets/js/vendor/jquery.slicknav.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.nivo.slider.pack.js"></script>
+<script src="../../assets/js/vendor/jquery.nivo.slider.pack.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/letteranimation.min.js"></script>
+<script src="../../assets/js/vendor/letteranimation.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/wow.min.js"></script>
+<script src="../../assets/js/vendor/wow.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/contact.js"></script>
+<script src="../../assets/js/contact.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/main.js"></script>
+<script src="../../assets/js/main.js"></script>
 </body>
 </html>
